# monty-hall-problem

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.341b6e6  README.md  host.cpp  host.h  montyhall_main.cpp  player.cpp  player.h  probabilistic_player.cpp  probabilistic_player.h  simulation.cpp  simulation.h  stubborn_player.cpp  stubborn_player.h  switching_player.cpp  switching_player.h
